--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "nodemon": "nodemon app",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -14,5 +15,8 @@
     "jade": "~1.11.0",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "jsonwebtoken": "^8.5.1"
   }
 }
